// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createElement Attribute 1`] = `
Object {
  "children": Array [],
  "key": Object {
    "children": Array [],
    "location": null,
    "quoted": false,
    "type": "Literal",
    "value": "color",
  },
  "location": null,
  "type": "Attribute",
  "value": Object {
    "children": Array [],
    "location": null,
    "quoted": false,
    "type": "Literal",
    "value": "red",
  },
}
`;

exports[`createElement Coment 1`] = `
Object {
  "children": Array [],
  "kind": "Macro",
  "location": null,
  "type": "Comment",
  "value": "This is comment",
}
`;

exports[`createElement Dot 1`] = `
Object {
  "children": Array [],
  "location": null,
  "type": "Dot",
}
`;

exports[`createElement Edge 1`] = `
Object {
  "children": Array [],
  "location": null,
  "targets": Array [
    Object {
      "children": Array [],
      "id": Object {
        "children": Array [],
        "location": null,
        "quoted": true,
        "type": "Literal",
        "value": "a",
      },
      "location": null,
      "type": "NodeRef",
    },
    Object {
      "children": Array [],
      "id": Object {
        "children": Array [],
        "location": null,
        "quoted": true,
        "type": "Literal",
        "value": "b",
      },
      "location": null,
      "type": "NodeRef",
    },
  ],
  "type": "Edge",
}
`;

exports[`createElement Graph 1`] = `
Object {
  "children": Array [],
  "directed": true,
  "location": null,
  "strict": false,
  "type": "Graph",
}
`;

exports[`createElement Literal 1`] = `
Object {
  "children": Array [],
  "location": null,
  "quoted": true,
  "type": "Literal",
  "value": "literal value",
}
`;

exports[`createElement Node 1`] = `
Object {
  "children": Array [],
  "id": Object {
    "children": Array [],
    "location": null,
    "quoted": false,
    "type": "Literal",
    "value": "node_id",
  },
  "location": null,
  "type": "Node",
}
`;

exports[`createElement NodeRef 1`] = `
Object {
  "children": Array [],
  "id": Object {
    "children": Array [],
    "location": null,
    "quoted": true,
    "type": "Literal",
    "value": "b",
  },
  "location": null,
  "type": "NodeRef",
}
`;

exports[`createElement NodeRefGroup 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [],
      "id": Object {
        "children": Array [],
        "location": null,
        "quoted": true,
        "type": "Literal",
        "value": "a",
      },
      "location": null,
      "type": "NodeRef",
    },
    Object {
      "children": Array [],
      "id": Object {
        "children": Array [],
        "location": null,
        "quoted": true,
        "type": "Literal",
        "value": "b",
      },
      "location": null,
      "type": "NodeRef",
    },
  ],
  "location": null,
  "type": "NodeRefGroup",
}
`;

exports[`createElement Subgraph 1`] = `
Object {
  "children": Array [],
  "location": null,
  "type": "Subgraph",
}
`;
